[tool.poetry]
name = "wat"
version = "0.1.0"
description = ""
authors = ["Tom Faulkner <tomfaulkner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
dynaconf = "^3.1.9"
uvicorn = "^0.18.3"
edgedb = "^1.3.0"
httpx = "^0.23.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-pyproject = "^1.2.3"
pytest = ">=7"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.19.0"
pytest-httpx = "^0.21.3"
invoke = "^2.0.0"
ruff = "^0.0.261"
ssort = "^0.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."wat.modules"]
# when making changes to this you must rerun poetry install
"attribs" = "wat.views.attribs"
"manual_exec" = "wat.views.manual_exec"
"version" = "wat.views.version"
"workflows" = "wat.views.workflows"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 88

[tool.ruff]
line-length = 88
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "B",   # bugbear
  # "D",   # pydocstyle
  "TRY", # tryceratops
  "RUF",
  "PGH", # pygrep
  "PTH", # pathlib
  "SIM", # simplify
]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"src/wat/views/*.py" = ["B008"]  # Do not perform function call 'Depends' in argument defaults
# TODO: fix these
"tasks.py" = ["PGH004", "PTH123", "PGH004"]
