[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Tom Faulkner <tomfaulkner@gmail.com>"]
readme = "README.md"
packages = [{include = "dummy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
